# Contxta

./: .gitignore
auth_service/: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  pyproject.toml
auth_service/UserAuth/: urls.py  views.py
auth_service/config/: settings.py  urls.py
document_service/: Dockerfile  pyproject.toml
document_service/app/: database.py  main.py
document_service/app/api/version_1/: documents.py  query.py
document_service/app/celery_worker/: celery_app.py  tasks.py
document_service/app/core/: config.py  security.py
document_service/app/models/: document.py
document_service/app/services/: document_proccesor.py  vector_db_service.py
