[project]
name = "contxta-auth"
version = "0.1.0"
description = "User Authentication service - part of Contxta project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-yasg>=1.21.11",
    "mysqlclient>=2.2.7",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "drf-yasg>=1.21.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "UserAuth*"]